<package format="2">
    <name>mrmf_ros</name>
    <version>0.0.0</version>
    <description>The mrmf_ros package</description>

    <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
    <license>BSD</license>
    <author email="arbogastaw@gmail.com">Alex Arbogast</author>
    
    <buildtool_depend>catkin</buildtool_depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_ros_move_group</depend>
    <depend>roscpp</depend>

    <export>
        <moveit_ros_move_group plugin="${prefix}/mrmf_capability_plugin_description.xml"/>
    </export>
</package>