<?xml version="1.0"?>
<package format="2">
  <name>mrmf_rviz</name>
  <version>0.0.0</version>
  <description>The mrmf_rviz package</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
